<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#117F2C">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/CollectScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="411dp"
    android:layout_height="929dp"
    tools:context=".collect_screen">

    <TextView
        android:id="@+id/textView"
        android:layout_width="203dp"
        android:layout_height="50dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/collect_title"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/black_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.241"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.476" />

    <ImageView
        android:id="@+id/imageViewMoney"
        android:layout_width="155dp"
        android:layout_height="159dp"
        app:layout_constraintBottom_toTopOf="@+id/white_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.586"
        app:srcCompat="@drawable/segurando_lixo" />

    <View
        android:id="@+id/black_view"
        android:layout_width="328dp"
        android:layout_height="420dp"
        android:background="@drawable/rounded_rectangle2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.635"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/white_view"
        app:layout_constraintVertical_bias="0.052" />

    <View
        android:id="@+id/white_view"
        android:layout_width="331dp"
        android:layout_height="415dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/rounded_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.594" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="234dp"
        android:layout_height="104dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toTopOf="@+id/cardview4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/black_view"
        app:layout_constraintVertical_bias="0.446"
        app:srcCompat="@drawable/logo_mte" />

    <ImageButton
        android:id="@+id/imageViewChevron"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/home_option_text"
        app:layout_constraintBottom_toTopOf="@+id/white_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.206"
        app:srcCompat="@drawable/chevron_left" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview4"
        android:layout_width="420dp"
        android:layout_height="94dp"
        app:cardBackgroundColor="#02140A"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageView12"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="-5dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/navbar1_text"
        android:scaleType="centerCrop"
        android:src="@drawable/user_profile"
        app:layout_constraintBottom_toTopOf="@+id/textView15"
        app:layout_constraintStart_toStartOf="@+id/cardview4"
        app:layout_constraintTop_toTopOf="@+id/cardview4" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="15dp"
        android:text="@string/profile_text"
        android:textColor="#fff"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/cardview4"
        app:layout_constraintStart_toStartOf="@+id/cardview4" />

    <TextView
        android:id="@+id/textViewHistory"
        android:layout_width="67dp"
        android:layout_height="23dp"
        android:layout_marginBottom="10dp"
        android:text="@string/history_text"
        android:textSize="10sp"
        android:textColor="#fff"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/cardview4"
        app:layout_constraintEnd_toStartOf="@+id/imageView8"
        app:layout_constraintStart_toEndOf="@+id/textView15" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="-5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/delete"
        app:layout_constraintBottom_toTopOf="@+id/textViewHistory"
        app:layout_constraintEnd_toStartOf="@+id/imageView8"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toTopOf="@+id/cardview4" />

    <TextView
        android:id="@+id/textViewmensagem"
        android:layout_width="67dp"
        android:layout_height="23dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/mensagem_text"
        android:textColor="#fff"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/cardview4"
        app:layout_constraintStart_toEndOf="@+id/imageView8" />


    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="-5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/mail"
        app:layout_constraintBottom_toTopOf="@+id/textViewmensagem"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/cardview4" />

    <TextView
        android:id="@+id/textViewconfig"
        android:layout_width="67dp"
        android:layout_height="23dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/config_text"
        android:textColor="#fff"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/cardview4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewmensagem" />

    <ImageButton
        android:id="@+id/imageView15"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="-5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/settings"
        android:background="@android:color/transparent"
        android:contentDescription="@string/navbar2_text"
        app:layout_constraintBottom_toTopOf="@+id/textViewconfig"
        app:layout_constraintEnd_toEndOf="@+id/cardview4"
        app:layout_constraintStart_toEndOf="@+id/imageView14"
        app:layout_constraintTop_toTopOf="@+id/cardview4" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="93dp"
        android:layout_height="57dp"
        android:layout_marginTop="-5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/cardview4"
        app:layout_constraintTop_toTopOf="@+id/cardview4"
        app:srcCompat="@drawable/logo_mte_verde" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewoption1"
        android:layout_width="274dp"
        android:layout_height="66dp"
        android:layout_marginTop="112dp"
        app:cardBackgroundColor="#49964A"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="@+id/white_view"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="@+id/white_view"
        app:layout_constraintTop_toTopOf="@+id/white_view" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewoption2"
        android:layout_width="274dp"
        android:layout_height="66dp"
        app:cardBackgroundColor="#49964A"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/white_view"
        app:layout_constraintEnd_toEndOf="@+id/cardviewoption1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/cardviewoption1"
        app:layout_constraintTop_toBottomOf="@+id/cardviewoption1"
        app:layout_constraintVertical_bias="0.397" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_selector"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/collect_option1"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/cardviewoption1"
        app:layout_constraintEnd_toEndOf="@+id/cardviewoption1"
        app:layout_constraintStart_toStartOf="@+id/cardviewoption1"
        app:layout_constraintTop_toTopOf="@+id/cardviewoption1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/button_selector"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/collect_option2"
        android:textColor="#fff"
        android:textSize="20sp"
        android:gravity="left"
        app:layout_constraintBottom_toBottomOf="@+id/cardviewoption2"
        app:layout_constraintEnd_toEndOf="@+id/cardviewoption2"
        app:layout_constraintStart_toStartOf="@+id/cardviewoption2"
        app:layout_constraintTop_toTopOf="@+id/cardviewoption2" />

</androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </HorizontalScrollView>

</ScrollView>