<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#117F2C">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/LoginScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="411dp"
    android:layout_height="929dp"
    android:background="#49964A"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="123dp"
        android:layout_height="67dp"
        android:fontFamily="@font/nunito_sans_semibold"
        android:shadowColor="#40FFFFFF"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:text="@string/login_text"
        android:textColor="#FFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/black_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="173dp"
        android:layout_height="28dp"
        android:layout_marginBottom="-5dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/open_login_text"
        android:textColor="#FFF"
        app:layout_constraintBottom_toTopOf="@+id/black_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.628" />


    <View
        android:id="@+id/black_view"
        android:layout_width="326dp"
        android:layout_height="397dp"
        android:background="@drawable/rounded_rectangle2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.658"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/white_view"
        app:layout_constraintVertical_bias="0.193" />

    <View
        android:id="@+id/white_view"
        android:layout_width="331dp"
        android:layout_height="415dp"
        android:background="@drawable/rounded_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.594" />


    <TextView
        android:id="@+id/textViewInput1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans_semibold"
        android:text="@string/login_choose"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/white_view"
        app:layout_constraintEnd_toEndOf="@+id/white_view"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toStartOf="@+id/white_view"
        app:layout_constraintTop_toTopOf="@+id/white_view"
        app:layout_constraintVertical_bias="0.138" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewInput1"
        android:layout_width="274dp"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="#60A6A6A6"
        app:cardElevation="0dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewInput2"
        app:layout_constraintEnd_toEndOf="@+id/white_view"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/white_view"
        app:layout_constraintTop_toBottomOf="@+id/textViewInput1"
        app:layout_constraintVertical_bias="0.228">


    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/InputUserName"
        android:layout_width="234dp"
        android:layout_height="56dp"
        android:background="#00000000"
        android:fontFamily="@font/nunito_sans_semibold"
        android:hint="@string/placeholder_login_choose"
        android:inputType="textEmailAddress"
        android:textColorHint="#211D1D"
        android:textColor="#211D1D"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/cardviewInput1"
        app:layout_constraintEnd_toEndOf="@+id/white_view"
        app:layout_constraintStart_toStartOf="@+id/white_view"
        app:layout_constraintTop_toTopOf="@+id/cardviewInput1" />

    <TextView
        android:id="@+id/textViewInput2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:fontFamily="@font/nunito_sans_semibold"
        android:text="@string/login_password"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/white_view"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="@+id/white_view"
        app:layout_constraintTop_toTopOf="@+id/white_view" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardviewInput2"
        android:layout_width="274dp"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="#60A6A6A6"
        app:cardElevation="0dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/white_view"
        app:layout_constraintStart_toStartOf="@+id/white_view"
        app:layout_constraintTop_toBottomOf="@+id/textViewInput2" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputpassword"
        android:layout_width="234dp"
        android:layout_height="56dp"
        android:background="#00000000"
        android:fontFamily="@font/nunito_sans_semibold"
        android:hint="@string/placeholder_password"
        android:inputType="textPassword"
        android:textColorHint="#211D1D"
        android:textColor="#211D1D"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/cardviewInput2"
        app:layout_constraintEnd_toEndOf="@+id/white_view"
        app:layout_constraintStart_toStartOf="@+id/white_view"
        app:layout_constraintTop_toTopOf="@+id/cardviewInput2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLogin"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/botao_customizado"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login_button"
        android:textAllCaps="false"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/textViewNewAccount"
        app:layout_constraintEnd_toEndOf="@+id/white_view"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/white_view"
        app:layout_constraintTop_toBottomOf="@+id/cardviewInput2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewNewAccount"
        android:layout_width="212dp"
        android:layout_height="39dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/nunito_sans_semibold"
        android:gravity="center"
        android:text="@string/call_registration_sing_up"
        android:textColor="#A6A6A6"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/white_view"
        app:layout_constraintEnd_toEndOf="@+id/white_view"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/white_view" />

    <ImageView
        android:id="@+id/LogoView"
        android:layout_width="200dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/black_view"
        app:layout_constraintVertical_bias="0.265"
        app:srcCompat="@drawable/logo_mte" />

    <TextView
        android:id="@+id/textViewNewAccount2"
        android:layout_width="132dp"
        android:layout_height="32dp"
        android:layout_marginTop="-10dp"
        android:fontFamily="@font/nunito_sans_semibold"
        android:gravity="center"
        android:text="@string/call_registration_click"
        android:textAllCaps="false"
        android:textColor="#A6A6A6"
        android:textColorLink="#737373"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/white_view"
        app:layout_constraintEnd_toEndOf="@+id/white_view"
        app:layout_constraintHorizontal_bias="0.663"
        app:layout_constraintStart_toStartOf="@+id/white_view"
        app:layout_constraintTop_toBottomOf="@+id/textViewNewAccount"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonNewAccount"
        android:layout_width="73dp"
        android:layout_height="50dp"
        android:layout_marginEnd="-12dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_selector"
        android:text="@string/call_registration_sing_up2"
        android:textAllCaps="false"
        android:textColor="#737373"
        app:layout_constraintBottom_toBottomOf="@+id/white_view"
        app:layout_constraintEnd_toStartOf="@+id/textViewNewAccount2"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewNewAccount"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </HorizontalScrollView>

</ScrollView>